--- a/index.html
+++ b/index.html
@@ -151,7 +151,15 @@
         <img src="images/slider7.jpg" alt="7"> 
     </div>
   </section>
-
+  
+  <section id="main_footer">
+    <div class="container">
+      <p>M&M MALL &nbsp; | &nbsp; 사업자등록번호 : 211-86-00870 &nbsp; | &nbsp; 대표이사 : 박성원 </p>
+      <address>주소 : 서울시 강남구 봉은사로 3길 24 &nbsp; | &nbsp; 팩스 : 02-523-3344</address>
+      <P>본사 대표전화 : 02-222-3344 &nbsp; | &nbsp; 가맹상담전화 : 02-3444-0444 &nbsp; | &nbsp; 고객센터 : 1544-2360 </P>
+      <p class="copyright">Copyright &copy; 2020 M&M Mall. ALL RIGHTS RESERVED</p>
+    </div>
+  </section>
 
 </body>
 </html>
